fix spacing on sign up forms

--- a/src/index.css
+++ b/src/index.css
@@ -390,7 +390,11 @@ nav a:focus {
 /*sign up page*/
 
 .signUpSection{
-  margin-top: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 40px);
 }
 
 .signUpHeader {
